k8s-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: qp-deployment
  namespace: qp-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qp
  template:
    metadata:
      labels:
        app: qp
        logging: enabled
    spec:
      containers:
      - image: spbdocker03:5000/qp:||version||
        name: qp
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /qptemp
          name: temp-volume
        - mountPath: /qplibrary
          name: library-volume
        - mountPath: /etc/localtime
          name: tz-config
        resources:
          limits:
            memory: "1Gi"
          requests:
            memory: "256Mi"
      volumes:
      - name: temp-volume
        emptyDir: {}
      - name: library-volume
        persistentVolumeClaim:
          claimName: library-pvc
      - name: tz-config
        hostPath:
          path: /usr/share/zoneinfo/Europe/Moscow
---
apiVersion: v1
kind: Service
metadata:
  name: qp-service
  namespace: qp-ns
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: qp
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qp-ingress
  namespace: qp-ns
spec:
  rules:
  - host: qp.dev.qsupport.ru
    http:
      paths:
      - backend:
          serviceName: qp-service
          servicePort: 80
